--- a/npcs/amera.yaml
+++ b/npcs/amera.yaml
@@ -334,8 +334,8 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: ships_crew
-      name: Ship's Crew
+    - id: the_djinn_rummy_s_crew
+      name: The Djinn Rummy's Crew
       role: Sailor, Courtisan
 
 
