--- a/npcs/nahkirin.yaml
+++ b/npcs/nahkirin.yaml
@@ -333,7 +333,9 @@ npc:
       name: Seagate Adventurer's Guild
     - id: kor_clan
       name: Kor Clan
-
+    - id: the_djinn_rummy_s_crew
+      name: The Djinn Rummy's Crew
+      role: Occasional Crew
     #
     # Adjectives or other tags that can be used for searching.
     #
@@ -559,7 +561,8 @@ npc:
      has the scars to prove it. Having lost so much and so many, she is reluctant to let anyone new into her life. Between her adventuring and the war, she has found many passes through places that few have ever found their way
      through and marked the trails in her clan colors. She is an expert guide and always happy to get out of Seagate into the wilderness, even if it means guiding strangers to their destination. Before the war, she was a
      follower of the goddess Kamsa and a member of her order, but the likeness of her goddess now bares to much of a resemblance to the Eldrazi Titans for her to have any faith left. She has abandoned her order but still
-     maintains the skills she has learned and has translated them into her daily life as a guide and adventurer
+     maintains the skills she has learned and has translated them into her daily life as a guide and adventurer. For a bit of a change of scenery now and again, she has been known to help out her friends as part of the crew of
+     the Djinn Rummy
 
     #
     # Personality (or something like that):
