--- a/Rulesets/race_abilities.yaml
+++ b/Rulesets/race_abilities.yaml
@@ -1852,3 +1852,46 @@
     - title: Regeneration
     - content: You can tap into the trolls greatest ability to stave off damage. As a reaction, when you take damage you can expend a Hit Die to reduce the damage by the amount rolled. You cannot reduce the damage if it is 
                acid or fire damage.
+               
+               
+  - title: Kender Abilities
+  - abilities:
+    - title: Brave
+    - content: You have advantage on saving throws you make to avoid or end the frightened condition on yourself.
+    - title: Kender Ace 
+    - content: Starting at 3rd level, you possess a magical ability to pull an item out of a bag or another container; as a bonus action, you can reach into a container you’re carrying and roll on the Kender Aces table to 
+               determine what item you pull out. The object glimmers softly and disappears after 1 hour. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you
+               finish a long rest.
+    - content: Kender Aces
+    - content: d6   Item
+    - content: 1    5d6 gold pieces
+    - content: 2    1 simple weapon of your choice that has the light property
+    - content: 3    1 item of your choice from the Adventuring Gear table in the Player’s Handbook. The item must cost no more than 1 gp and weigh no more than 1 lb.
+    - content: 4    1 random item from the Trinkets table in the Player’s Handbook.
+    - content: 5    Your choice of a crowbar or a grappling hook
+    - content: 6    1 item of your choice from the Tools table in the Player’s Handbook. The item must cost no more than 10 gp.
+    - title: Taunt
+    - content: You have a supernatural ability to home in on a creature’s emotional raw nerves and craft a taunt that flusters that creature. As a bonus action, you can unleash a barrage of insults at a creature within 60 feet 
+               of you that can hear and understand you. The target must succeed on a Wisdom saving throw (DC equal to 8 + your proficiency bonus + your Charisma modifier), or it has disadvantage on attack rolls until the start 
+               of your next turn. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
+               
+               
+  - title: Sea Elf Abilities
+  - abilities:
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+    - title: Sea Elf Training
+    - content: You have proficiency with the spear, trident, light crossbow, and net.
+    - title: Child of the Sea
+    - content: You have a swimming speed of 30 feet, and you can breathe air and water.
+    - title: Friend of the Sea
+    - content: Using gestures and sounds, you can communicate simple ideas with any beast that has an innate swimming speed.
+    - title: Extra Language
+    - content: You can speak, read, and write Aquan.               
