--- a/npcs/uthriel_seawalker.yaml
+++ b/npcs/uthriel_seawalker.yaml
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Genasi
+    race: Genasi \ Elf
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Water
+    sub-race: Water \ Sea
 
     #
     # Pronouns (case insensitive):
@@ -214,7 +214,7 @@ npc:
     # Required.
     # Max length per occupation: ...
     occupation:
-    - Sailor
+    - Ship's Captain
     
 
     #
@@ -335,6 +335,7 @@ npc:
     factions:
     - id: the_djinn_rummy_s_crew
       name: The Djinn Rummy's Crew
+      role: Captain
 
 
     #
@@ -491,11 +492,28 @@ npc:
     - content: You have resistance to acid damage.
     - title: Amphibious
     - content: You can breathe air and water.
-    - title: Swim
-    - content: You have a swimming speed of 30 feet.
     - title: Call to the Wave
     - content: You know the Shape Water cantrip. When you reach 3rd level, you can cast the Create or Destroy Water spell as a 2nd-level spell once with this trait, and you regain the ability to cast it this way 
                when you finish a long rest. Constitution is your spellcasting ability for these spells.
+  - title: Sea Elf Abilities
+  - abilities:
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+    - title: Sea Elf Training
+    - content: You have proficiency with the spear, trident, light crossbow, and net.
+    - title: Child of the Sea
+    - content: You have a swimming speed of 30 feet, and you can breathe air and water.
+    - title: Friend of the Sea
+    - content: Using gestures and sounds, you can communicate simple ideas with any beast that has an innate swimming speed.
+    - title: Extra Language
+    - content: You can speak, read, and write Aquan.  
   - title: Sorcerer Abilities
   - abilities:
   - title: Sorcerer Spellcasting
