--- a/npcs/Races Classes and Subclasses/doctor_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/doctor_subclasses.yaml
@@ -134,19 +134,19 @@
                has spent a Hit Die using this ability, it can't do so again until it finishes a long rest.
     - title: Surgical Precision
     - content: You can make attacks with astonishing precision. When you use your Sneak Attack feature on a creature, you can impose one of the following effects on that target
-               Blind - It has disadvantage on the next attack roll it makes until the start of your next turn.
-               Clot - It can't regain hit points until the start of your next turn.
-               Cripple - Its speed is reduced by 10 feet until the start of your next turn.
+    - content: Blind - It has disadvantage on the next attack roll it makes until the start of your next turn.
+    - content: Clot - It can't regain hit points until the start of your next turn.
+    - content: Cripple - Its speed is reduced by 10 feet until the start of your next turn.
     - title: Bloodletting
     - content: You can treat others of certain ailments using your Doctor's Bag. Doing so takes 10 minutes and causes the creature to lose a Hit Die. If it cannot, this process has no effect. Choose one disease or one 
                condition afflicting the creature. The condition can be blinded, deafened, paralyzed, poisoned. Alternatively, you can end one effect reducing the target’s hit point maximum.
     - title: Examine Corpse
     - content: You can examine the bodies of fallen creatures. If you spend at least 10 minutes dissecting the corpse of a Large or smaller aberration, beast, celestial, dragon, fey, fiend, giant, humanoid, monstrosity,
                or plant, you learn the anatomy of that creature inside and out. You gain the following benefits towards creatures that share a common creature type with the examined creature
-               You have advantage on attacks made against examined creatures so long as you don't have disadvantage on the attack roll.
-               You can use your Surgical Precision against examined creatures type anytime you hit.
-               You have advantage on any Wisdom (Medicine) checks related to examined creatures.
-               Examining the corpse of a humanoid only allows you to gain these benefits against humanoids that share a race with it (such as gnolls and orcs). You must spend at least 10 minutes of each long rest 
+    - content: You have advantage on attacks made against examined creatures so long as you don't have disadvantage on the attack roll.
+    - content: You can use your Surgical Precision against examined creatures type anytime you hit.
+    - content: You have advantage on any Wisdom (Medicine) checks related to examined creatures.
+    - content: Examining the corpse of a humanoid only allows you to gain these benefits against humanoids that share a race with it (such as gnolls and orcs). You must spend at least 10 minutes of each long rest 
                reviewing this information in order to maintain these benefits. This effect ends if you study a different creature.
     - title: Miracle Worker
     - content: You have mastered medicine's effects on the body, allowing you to wrench the fallen from the cold grasp of death. You can cast the Raise Dead without expending a spell slot using your Doctor's Bag. You       
