--- a/npcs/Races Classes and Subclasses/feats.yaml
+++ b/npcs/Races Classes and Subclasses/feats.yaml
@@ -10,11 +10,11 @@
    - content: +1 in Str. or Dex., you stand up and climb more quickly, and you can jump with only a 5-ft run.
    - title: Barbed Hide
    - content: Prerequisite - Tiefling One of your ancestors was a barbed devil or other spiky fiend. Barbs protrude from your head. You gain the following benefits - 
-              Increase your Constitution or Charisma score by 1, up to a maximum of 20.
-              You gain proficiency in the Intimidation skill. If you’re already proficient in it, your proficiency bonus is doubled for any check you make with it.
-              As a bonus action, you can cause small barbs to protrude all over your body or cause them to retract. At the start of each of your turns while the barbs are out, you deal 1d6 piercing damage to any creature
+   - content: Increase your Constitution or Charisma score by 1, up to a maximum of 20.
+   - content: You gain proficiency in the Intimidation skill. If you’re already proficient in it, your proficiency bonus is doubled for any check you make with it.
+   - content: As a bonus action, you can cause small barbs to protrude all over your body or cause them to retract. At the start of each of your turns while the barbs are out, you deal 1d6 piercing damage to any creature
               grappling you or any creature grappled by you.
-              You gain resistance to cold and acid
+   - content: You gain resistance to cold and acid
    - title: Blood Magic
    - content: Prerequisite - The ability to cast at least one spell. Sacrifice hit points and regain spell slots of level 5 or lower
    - title: Bountiful Luck
