--- a/npcs/Races Classes and Subclasses/race_abilities.yaml
+++ b/npcs/Races Classes and Subclasses/race_abilities.yaml
@@ -676,8 +676,8 @@
   - abilities: 
     - title: Relentless Nature 
     - content: Regains 1HP at the beginning of each turn if below half maximum HP
-               If he dies, he returns to life 24hrs after death. If his body is destroyed he will reform within 1 mile of where he was killed. Equipment destroyed is not regained     
-               Knows the distance and direction between him and the creature involved in his goal unless they are on another plane
+    - content: If he dies, he returns to life 24hrs after death. If his body is destroyed he will reform within 1 mile of where he was killed. Equipment destroyed is not regained     
+    - content: Knows the distance and direction between him and the creature involved in his goal unless they are on another plane
           
           
   - title: Kor Abilities
