--- a/npcs/oswald_vardklemp.yaml
+++ b/npcs/oswald_vardklemp.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: Oswald_Vardklemp
+  id: oswald_vardklemp
 
   #
   # The name of the submitter (your name).
