--- a/npcs/thadeus_periwinkle.yaml
+++ b/npcs/thadeus_periwinkle.yaml
@@ -262,7 +262,7 @@ npc:
     #
     # Required.
     #
-    subclass: Monster Slayer/Artillerist
+    subclass: Monster Slayer/Mastermaker
 
     #
     # Class level.
@@ -528,45 +528,38 @@ npc:
     - content: Smith's Tool proficiency bonus is doubled
     - title: Flash of Genius
     - contents: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws   
-  - title: Artillerist Abilities
+  - title: Mastermaker Abilities
   - abilities: 
     - title: Spellcasting
     - abilities:
     - title: Spell DC
     - content:
     - title: 3rd Level
-    - content: Shield, Thunderwave
+    - content: Absorb Elements, Thunderous Smite
     - title: 5th Level
-    - content: Scortching Ray, Shatter
+    - content: Enhance Ability, Lesser Restoration
     - title: 9th Level
-    - content: Fireball, Wind Wall
-    - title: Tool Proficiency
-    - contnet: You gain proficiency with woodcarver's tools. If you already have this proficiency, you gain proficiency with one other type of artisan's tools of your choice
-    - title: Eldritch Cannon
-    - content: You've learned how to create a magical cannon. Using woodcarver's tools or smith's tools, you can take an action to magically create a Small or Tiny eldritch cannon in an unoccupied space on a 
-               horizontal surface within 5 feet of you. A Small eldritch cannon occupies its space, and a Tiny one can be held in one hand. Once you create a cannon, you can't do so again until you finish a long rest
-               or until you expend a spell slot to create one. You can have only one cannon at a time and can't create one while your cannon is present. The cannon is a magical object. Regardless of size, the cannon 
-               has an AC of 18 and a number of hit points equal to five times your artificer level. It is immune to poison damage and psychic damage. If it is forced to make an ability check or a saving throw, treat 
-               all its ability scores as 10 (+0). If the mending spell is cast on it, it regains 2d6 hit points. It disappears if it is reduced to 0 hit points or after 1 hour. You can dismiss it early as an action. 
-               When you create the cannon, you determine its appearance and whether it has legs. You also decide which type it is, choosing from the options on the Eldritch Cannons table. On each of your turns, you 
-               can take a bonus action to cause the cannon to activate if you are within 60 feet of it. As part of the same bonus action, you can direct the cannon to walk or climb up to 15 feet to an unoccupied space,
-               provided it has legs.
-    - content: Flamethrower - The cannon exhales fire in an adjacent 15-foot cone that you designate. Each creature in that area must make a Dexterity saving throw against your spell save DC, taking 2d8 fire damage
-                              on a failed save or half as much damage on a successful one. The fire ignites any flammable objects in the area that aren't being worn or carried.
-    - content: Force Ballista-  Make a ranged spell attack, originating from the cannon, at one creature or object within 120 feet of it. On a hit, the target takes 2d8 force damage, and if the target is a creature, 
-                                it is pushed up to 5 feet away from the cannon.
-    - content: Protector - The cannon emits a burst of positive energy that grants itself and each creature of your choice within 10 feet of it a number of temporary hit points equal to 1d8 + your Intelligence 
-                           modifier (minimum of +1).           
-    - title: Arcane Firearm
-    - content: You know how to turn a wand, staff, or rod into an arcane firearm, a conduit for your destructive spells. When you finish a long rest, you can use woodcarver's tools to carve special sigils into a wand, 
-               staff, or rod and thereby turn it into your arcane firearm. The sigils disappear from the object if you later carve them on a different item. The sigils otherwise last indefinitely. You can use your 
-               arcane firearm as a spellcasting focus for your artificer spells. When you cast an artificer spell through the firearm, roll a d8, and you gain a bonus to one of the spell's damage rolls equal to the 
-               number rolled.
-    - title: Explosive Cannon
-    - content: every eldritch cannon you create is more destructive
-    - content: The cannon's damage rolls all increase by 1d8.
-    - content: As an action, you can command the cannon to detonate if you are within 60 feet of it. Doing so destroys the cannon and forces each creature within 20 feet of it to make a Dexterity saving throw 
-               against your spell save DC, taking 3d8 force damage on a failed save or half as much damage on a successful one.
+    - content: Blinding Smite, Haste
+    - title: Tools of Integration
+    - content: At 3rd level, you gain proficiency with heavy armor and smith’s tools. If you already have this tool proficiency, you gain proficiency with one other type of artisan’s tools of your choice.
+    - title: Prosthesis Expertise
+    - content: At 3rd level, whenever you finish a long rest, you can touch a nonmagical object and imbue it with your power, creating a permanent magical item that replaces a lost limb—a hand, arm, foot, leg, or similar body 
+               part. While the prosthetic is attached, it functions identically to the part it replaces. The wearer can detach or reattach it as an action, and it can’t be removed against the wearer’s will. It detaches if the 
+               wearer dies.
+    - title: Battlefist
+    - content: At 3rd level you replace one of your arms with a battlefist, a magical prosthetic you created. Your battlefist is a simple melee weapon, and you can use it as a spellcasting focus for your artificer spells. While 
+               your battlefist is a magical weapon, it can be infused as if it were a nonmagical weapon.
+               When you attack with your battlefist, you can use your Intelligence modifier instead of Strength for the attack roll. If you hit with it, you deal bludgeoning damage equal to 1d10 + your Strength or Intelligence 
+               modifier. At 9th level, the damage dealt by your battlefist increases to 2d10 + your Strength or Intelligence modifier.
+               Additionally, you can choose one of the following weapon properties to add to your battlefist - finesse, thrown (range 20/60), or reach. When you finish a long rest, you can replace this property with a different
+               weapon property from the list.
+    - title: Extra Attack
+    - content: At 5th level, you can attack twice, rather than once, whenever you take the Attack action on your turn.
+    - title: Improved Battlefist
+    - content: At 9th level, you have modified your battlefist in both mundane and magical ways. It gains the following benefits
+               When you infuse your battlefist, you can apply two infusions to it at a time. If both infusions grant bonuses to your attack rolls or armor class, you gain only the greater bonus.
+               Your battlefist is also a shield, increasing your armor class by 2. You can wield it as a weapon even if you are using it as a shield. You can infuse it as if it were both a simple melee weapon and a shield.
+               The maximum number of items you can infuse at once increases by 1, but the extra infusion must be applied to your battlefist.
   - title: Ranger Abilities
   - abilities:
   - title: Ranger Spellcasting
