--- a/npcs/the_monster.yaml
+++ b/npcs/the_monster.yaml
@@ -630,11 +630,11 @@ npc:
     #
     background-story: |
       The Monster is The Collegium Imaginata's dirty little secret. Roderick Holmestar was a brilliant chemist and alchemist and a founding member and board member of the Collegium, personally recruited by Oswald Vardklemp 
-      for his brilliant mind. He was kidnapped and tortured by a cult in an attempt to force him to create an immortality elixir for them. Failing to do so, they chose to sacrifice him to their patron gods.  Oswald and the 
-      Collegium attempted to track them down but arrived too late to save him. After dispatching the members of the cult, the Collegium collected Rodericks remains, took them back to their compound and rebuilt him. Using their 
-      collective knowledge of chemistry, biology, mechanics and artificer's magic, they managed to restore him to a semblance of life. Unfortunately, as much machine as he is undead man, his brilliant mind seems to be all 
-      but gone. He can't speak but has an animal ferocity and strength. The Collegium has tried to keep The Monster locked up, safe, but comfortable until they can figure out how to bring their friend back. But The Monster 
-      has escaped!    
+      for his brilliant mind. He was kidnapped and tortured by a cult in an attempt to force him to create an immortality elixir for them. Failing to do so, they chose to sacrifice him to their patron gods.  The 
+      Collegium, spearheaded by his lover Dr. Andreas Stormhollow, attempted to track them down but arrived too late to save him. After dispatching the members of the cult, Stormhollow collected Rodericks remains, took them back 
+      to the compound and rebuilt him. Using their collective knowledge of chemistry, biology, mechanics and artificer's magic, they managed to restore him to a semblance of life. Unfortunately, as much machine as he is undead 
+      man, his brilliant mind seems to be all but gone. He can't speak but has an animal ferocity and strength. The Collegium has tried to keep The Monster locked up, safe, but comfortable until they can figure out how to bring 
+      their friend back. But The Monster has escaped!    
       
     #
     # Personality (or something like that):
