--- a/npcs/ulther_hapwath.yaml
+++ b/npcs/ulther_hapwath.yaml
@@ -619,4 +619,5 @@ npc:
       time looking at them, although they are often using some kind of glamour (disguise self, polymorph, etc.) when in public so as not to stand out as much. Ulther is fanatical about his work and about chasing his 
       personal concept of bodily perfection and finds it hard to comprehend why everyone isn't seeking to augment thier bodies. They are reckless and never think twice about experimenting on themselves and have little 
       regard for the wellbeing of the other creatures that they experiment on. Thanks to the influence of their secret benefactor, they have gradually started to explore the commonly unknown arcane study of biomancy. 
-      While mostly keeping this information to themselves, they have shared some of their studies with their close friend and fellow body-modifying scientist and Collegium member Thadeus Periwinkle.
+      While mostly keeping this information to themselves, they have shared some of their studies with their close friend and fellow body-modifying scientist and Collegium member Thadeus Periwinkle. Thadeus and Ulther 
+      are also the only two members of the Collegium who are still in contact with their estranged colleague, Dr. Andreas Stormhollow.
