--- a/npcs/the_monster.yaml
+++ b/npcs/the_monster.yaml
@@ -613,10 +613,10 @@ npc:
     
   - title: Attacks
   - content: The Monster - has 2 attacks. Will attack with daggers or fists in melee range
-             Roderick Holmestar - has 3 attacks and will attack at range whenever possible
+  - content: Roderick Holmestar - has 3 attacks and will attack at range whenever possible
   - title: Combat Tactics
   - content: The Monster - Straigh ahead rage fight
-             Roderick Holmestar - will try to avoid fighting at as much as possible, but if required he will do his best to outthink his opponents
+  - content: Roderick Holmestar - will try to avoid fighting at as much as possible, but if required he will do his best to outthink his opponents
 
     
   profile:
