--- a/npcs/Races Classes and Subclasses/artificer_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/artificer_subclasses.yaml
@@ -213,12 +213,12 @@
                arcane firearm as a spellcasting focus for your artificer spells. When you cast an artificer spell through the firearm, roll a d8, and you gain a bonus to one of the spell's damage rolls equal to the 
                number rolled.
     - title: Explosive Cannon
-    - content: every eldritch cannon you create is more destructive
+    - content: Every eldritch cannon you create is more destructive
     - content: The cannon's damage rolls all increase by 1d8.
     - content: As an action, you can command the cannon to detonate if you are within 60 feet of it. Doing so destroys the cannon and forces each creature within 20 feet of it to make a Dexterity saving throw 
                against your spell save DC, taking 3d8 force damage on a failed save or half as much damage on a successful one.
     - title: Fortified Position
-    - content: you’re a master at forming well-defended emplacements using Eldritch Cannon
+    - content: You’re a master at forming well-defended emplacements using Eldritch Cannon
     - content: You and your allies have half cover while within 10 feet of a cannon you create with Eldritch Cannon, as a result of a shimmering field of magical protection that the cannon emits.
     - content: You can now have two cannons at the same time. You can create two with the same action (but not the same spell slot), and you can activate both of them with the same bonus action. You determine 
                whether the cannons are identical to each other or different. You can't create a third cannon while you have two.
