--- a/npcs/Races Classes and Subclasses/druid_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/druid_subclasses.yaml
@@ -725,3 +725,58 @@
     - title: Emissary of the Sun
     - content: When you use Embrace Radiance, you partially become fire itself, and you are under the effect of investiture of flame.
                Additionally, you can expend two uses of wildshape to grow wings of flame, taking on a phoenix-like form and gaining a fly speed of 30 feet in addition to the rest of the effects.
+               
+               
+  - title: Circle of the Blighted Abilities
+  - abilities: 
+    - title: Defile Ground
+    - content: Starting at 2nd level when you choose this circle, you can use a bonus action to corrupt a patch of land or an area of water in a 10-foot radius centered on a point within 60 feet of you. This corruption lasts for
+               1 minute. The corrupted area is difficult terrain for creatures that are hostile to you. Additionally, when a creature in the area takes damage from an attack or spell for the first time on a turn, it takes an 
+               extra 1d4 necrotic damage. You can move this patch of corruption up to 30 feet as a bonus action. Flying creatures are unaffected by the corruption.
+    - content: Starting at 10th level, the area of your defiled ground increases to a 20-foot radius. Additionally, the extra damage dealt by your defiled ground increases to 1d6 when you reach 10th level in this class, and 1d8 
+               at 14th level.
+    - content: Once you use this feature, you can’t use it again until you finish a short or long rest.
+    - title: Blighted Shape
+    - content: Also at 2nd level, your physical form begins to show effects of the corruption you wield, tracing blackened veins across your skin, producing gnarled, bony protrusions, or other eerie phenomena. You gain 
+               proficiency in the Charisma (Intimidation) skill.
+    - content: Additionally, while you are transformed by you Wild Shape feature, you gain a +2 bonus to AC as gnarled spines protrude from your body. Your beast form also gains darkvision with a radius of 60 feet, or an 
+               additional 60 feet of darkvision if it already has that sense.
+    - title: Call of the Shadowseeds
+    - content: At 6th level, you learn to summon the feral children of the forest from the life force of your enemies. When a creature that is not undead or a construct takes damage within the area of your Defile Ground feature,
+               you can use your reaction to summon a blighted sapling in an unoccupied space within 5 feet of the creature. You can direct the sapling to make an attack against any creature within 5 feet of it as a part of this 
+               reaction. The sapling then acts on your initiative, obeying your verbal commands.
+    - content: The blighted sapling remains in your service until it’s reduced to 0 hit points, until the end of your next long rest, or until you summon another sapling, at which point it crumbles into foul-smelling mulch. You 
+               can use this feature a number of times equal to your proficiency bonus, regaining all expended uses when you finish a long rest.
+    - content: The sapling uses the statistics below. Its features scale based on your level and proficiency bonus (PB).
+    - content: Blighted Sapling
+    - content: Medium plant
+    - content: Armor Class - 10 + PB (natural armor)
+    - content: Hit Points - twice your druid level
+    - content: Speed: 30 ft.
+    - content: STR 8(-1) DEX 13(+1) CON 12(+1) INT 4(-3) WIS 8(-1) CHA 3(-4)
+    - content: Damage Vulnerabilities - fire
+    - content: Damage Resistances - necrotic, poison
+    - content: Condition Immunities - blinded, deafened, poisoned
+    - content: Senses - blindsight 60 ft. (blind beyond this radius), passive Perception 9
+    - content: Languages - understands the languages you speak
+    - content: Challenge —
+    - content: Proficiency Bonus (PB) - equals your bonus
+    - content: Actions
+    - content: Multiattack. When you reach 14th level in this class, the blighted sapling makes two claw attacks
+    - content: Claws. Melee Weapon Attack - your spell attack modifier to hit, reach 5 ft., one target. Hit: 2d4 + PB piercing damage.
+    - title: Foul Conjuration
+    - content: Starting at 10th level, the creatures you conjure are malformed and bloated with toxins. Any beast, fey, or plant (including your blighted sapling) summoned or created by your spells or class features gains the 
+               following traits
+    - content: Blighted Resilience - The creature has immunity to necrotic and poison damage and to the poisoned condition.
+    - content: Toxic Demise - When the creature is reduced to 0 hit points, it explodes in a burst of toxic mulch or fetid viscera. Each creature within 5 feet of the exploding creature must succeed on a Constitution saving 
+               throw against your spell save DC or take necrotic damage based on the creature’s challenge rating (see the table below). As an action, you can also cause a summoned creature to explode, immediately killing it.
+    - content: Toxic Demise Damage
+    - content: Creature CR	             Damage
+    - content: 1/4 or lower	             1d4 necrotic damage
+    - content: 1/2	                     1d6 necrotic damage
+    - content: 1 or higher	             A number of d8s of necrotic damage equal to the creature's challenge rating
+    - content: No challenge rating	     A number of d6s of necrotic damage equal to your proficiency bonus
+    - title: Incarnation of Corruption
+    - content: At 14th level, your physical form begins to take on the tainted traits of the land you are bonded to. Your skin grows ashen, and your eyes darken or turn completely white. Spines and jagged spurs emerge from your 
+               body, granting you resistance to necrotic damage and a +2 bonus to AC.
+    - content: Additionally, whenever you start your turn within the radius of the corruption created by your Defile Ground feature, you can use a bonus action to gain temporary hit points equal to your proficiency bonus.
