--- a/npcs/father_seaton_gorey.yaml
+++ b/npcs/father_seaton_gorey.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: grey_crow
+  id: father_seaton_gorey
 
   #
   # The name of the submitter (your name).
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Grey Crow
+  name: Father Seaton Gorey
 
   #
   # The NPC artwork.
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Changeling
+    race: Human
 
     #
     # The sub-race can be anything.
