--- a/npcs/Races Classes and Subclasses/cleric_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/cleric_subclasses.yaml
@@ -620,15 +620,22 @@
     - title: 9th level
     - content: Dominate Person, Hold Monster
     - title: Bloodletting Focus
-    - content: Whenever blood clerics deal damage to creatures with blood with any spell of 1st level or higher (including the weapon attacks of spiritual weapon[10]), they deal extra necrotic damage by drawing blood from the wounds.
+    - content: Whenever blood clerics deal damage to creatures with blood with any spell of 1st level or higher (including the weapon attacks of spiritual weapon[10]), they deal extra necrotic damage by drawing blood from the 
+               wounds.
     - title: Channel Divinity - Crimson Bond
-    - content: As an action, blood clerics can focus on a sample of a creature's blood to learn that creature's approximate distance from the cleric and in which direction, and the creature's general state of health (based on percentage of hit points), as long as the creature is within 10 miles. The cleric can maintain concentration on this bond for up to one hour.
-               While the bond is maintained, the cleric can spend an action to force the target creature to make a Constitution saving throw. If they succeed, the bond ends. If the creature fails, the cleric can see through the target's eyes or hear through the target's ears instead of the cleric's own for a number of rounds equal to the cleric's Wisdom modifier (minimum of 1 round), after which the bond ends. Regardless of the outcome of the save, the cleric takes necrotic damage.
+    - content: As an action, blood clerics can focus on a sample of a creature's blood to learn that creature's approximate distance from the cleric and in which direction, and the creature's general state of health (based on 
+               percentage of hit points), as long as the creature is within 10 miles. The cleric can maintain concentration on this bond for up to one hour.
+               While the bond is maintained, the cleric can spend an action to force the target creature to make a Constitution saving throw. If they succeed, the bond ends. If the creature fails, the cleric can see through the 
+               target's eyes or hear through the target's ears instead of the cleric's own for a number of rounds equal to the cleric's Wisdom modifier (minimum of 1 round), after which the bond ends. Regardless of the outcome 
+               of the save, the cleric takes necrotic damage.
     - title: Channel Divinity - Blood Puppet
-    - content: As an action, blood clerics can force a Large or smaller creature (at 17th level, Huge or smaller) to make a Wisdom saving throw. If they fail, they become charmed and physically controlled by the cleric. Unconscious and dead creatures automatically fail the save.
+    - content: As an action, blood clerics can force a Large or smaller creature (at 17th level, Huge or smaller) to make a Wisdom saving throw. If they fail, they become charmed and physically controlled by the cleric. 
+               Unconscious and dead creatures automatically fail the save.
     - title: Sanguine Recall
-    - content: Blood clerics can, as an action once per long rest, recover spell slots (up to 5th level) with a combined level of half the cleric's class level (rounded up), taking damage based on the levels of spell slots recovered.
+    - content: Blood clerics can, as an action once per long rest, recover spell slots (up to 5th level) with a combined level of half the cleric's class level (rounded up), taking damage based on the levels of spell slots 
+               recovered.
     - title: Divine Strike
     - content: Blood clerics deal additional necrotic damage on weapon attacks.
     - title: Vascular Corruption Aura
-    - content: As an action once per long rest, a blood cleric can emit an aura for 30 feet for one minute that causes enemy creatures with blood to bleed, suffering necrotic damage each turn they enter or start their turn in the aura. Enemies that would regain hit points while within the aura only regain half of the intended number, rounded up.
+    - content: As an action once per long rest, a blood cleric can emit an aura for 30 feet for one minute that causes enemy creatures with blood to bleed, suffering necrotic damage each turn they enter or start their turn in 
+               the aura. Enemies that would regain hit points while within the aura only regain half of the intended number, rounded up.
