--- a/npcs/grey_crow.yaml
+++ b/npcs/grey_crow.yaml
@@ -740,7 +740,7 @@ npc:
                with this magic weapon. If you attack a creature's astral body (that is, the creature is under the effect of the astral projection spell or similar magic) and the attack was a critical hit, you sever that 
                creature's astral cord.
     - title: Twin Snake Belt
-    - cotnent: While wearing this belt it gives an extra +2 bonus to his AC. The belt can be grasped by the wearer and tossed to the ground (treating the wearer as proficient) with a range increment of 10 feet. Upon impact, the 
+    - content: While wearing this belt it gives an extra +2 bonus to his AC. The belt can be grasped by the wearer and tossed to the ground (treating the wearer as proficient) with a range increment of 10 feet. Upon impact, the 
                belt becomes two small vipers. If either of the snakes are killed or leave 100 feet from the wearer, they return to belt form upon the wearer instantly. Slain snakes cannot be re-summoned for 24 hours. They can be
                recalled as a standard action but otherwise may be summoned at will. Poison taken from or injuring a creature vanishes if the inflicting snake returns to belt form (but otherwise not any damage the poison may have
                already caused).
