--- a/npcs/father_seaton_gorey.yaml
+++ b/npcs/father_seaton_gorey.yaml
@@ -446,14 +446,14 @@ npc:
   #
   stats:
     armour-class: 21
-    hit-points: 311
-    speed: 30
-    str: 17
-    dex: 15
+    hit-points: 263
+    speed: 35
+    str: 13
+    dex: 17
     con: 18
-    int: 20
+    int: 23
     wis: 29
-    cha: 23
+    cha: 20
 
   #
   # Special characteristics.
@@ -468,24 +468,21 @@ npc:
     - Charisma
     - Intelligence
     damage-immunities:
-    - Poison, Psychic, Poison and Necrotic
+    - Poison and Necrotic
     condition-immunities:
-    - Exhaustion, Poisoned, Diseased
+    - Exhaustion, Poisoned, Diseased, Death
     resistances:
-    - Magic, Cold, Lightning
+    - Magic, Cold, Radiant
     skills:
-    - Herbalism
+    - Oration
     proficiencies:
     - Arcana
-    - Nature
-    - Survival
     - Performance
     - Intimidation
     - Perception    
     - Deception
     - Persuasion
     - Insight
-    - Herbalist's Kit
   special-abilities:
   - title: Revenant Abilities
   - abilities: 
@@ -510,27 +507,27 @@ npc:
   - title: Cleric Spellcasting
   - abilities: 
     - title: Spell DC
-    - content:
+    - content: 22
     - title: Cantrips
-    - content:    
+    - content: Decompose, Guidance, Thaumaturgy, Toll the Dead, Light, Mending, Sacred Flame,   
     - title: 1st Level
-    - content:    
+    - content: Bane, Bless, Cure Wounds, Inflict Wounds, Command, Detect Magic, Detect Evil and Good, Detect Poison and Disease, Guiding Bolt, Purify Food and Drink    
     - title: 2nd Level
-    - content:    
+    - content: Augury, Silence, Spiritual Weapon, Zone of Truth, Blindness/Deafness  
     - title: 3rd Level
-    - content:    
+    - content: Animate Dead, Bestow Curse, Dispel Magic, Spirit Guardians, Tongues, 
     - title: 4th Level
-    - content:    
+    - content: Divination, Banishment, Control Water, Locate Creature, 
     - title: 5th Level
-    - content:    
+    - content: Raise Dead, Scrying, Contagion, Dispel Good and Evil, Insect Plague, Legend Lore, Geas, Commune
     - title: 6th Level
-    - content:    
+    - content: Create Undead, Word of Recall, Forbiddance, True Seeing, Harm 
     - title: 7th Level
-    - content:    
+    - content: Symbol, Fire Storm, Regenerate, 
     - title: 8th Level
-    - content:    
+    - content: Antimagic Field, Control Weather, Earthquake
     - title: 9th Level
-    - content: 
+    - content: Astral Projection, Gate, True Ressurection
   - title: Channel Divinity
   - abilities:    
     - title: Turn Undead
@@ -550,7 +547,7 @@ npc:
     - content: You have advantage on Wisdom (Survival) checks to track fey, fiends, or undead, as well as on Intelligence ability checks to recall information about them. The Hunter’s Bane also empowers your body to 
                control and shape hemocraft magic, using your own blood and life essence to fuel your abilities. Some of your features require your target to make a saving throw to resist the feature’s effects. 
     - title: Hemocraft save DC
-    - content:
+    - content: 22
     - title: Blood Maledict 
     - content: you gain the ability to channel, and sometimes sacrifice, a part of your vital essence to curse and manipulate creatures through hemocraft magic. You gain one Blood Curse of your choice. You learn one 
                additional blood curse of your choice, and you can choose one of the blood curses you know and replace it with another blood curse, at 6th, 10th, 14th, and 18th level. When you use your Blood Maledict, 
@@ -559,21 +556,21 @@ npc:
                immune to blood curses, unless you have amplified the curse. You can use this feature once. Beginning at 6th level, you can use your Blood Maledict feature twice, at 13th level you can use it three times 
                between rests, and at 17th level, you can use it four times between rests. You regain all expended uses when you finish a short or long rest.
     - title: Hemocraft Die
-    - content:    
+    - content: 1d10   
     - title: Blood Curses Known
-    - content:    
+    - content: 5
     - title: Blood Curses
-    - content:    
+    - content: Blood Curse of the Eyeless, Blood Curse of the Exposure, Blood Curse of the Marked, Blood Curse of the Muddled Mind, Blood Curse of Bloated Agony, Blood Curse of the Fallen Puppet
     - title: Figthing Style
-    - content:
+    - content: Two-Weapon Fighting
     - title: Crimson Rite
-    - content: You learn to invoke a rite of hemocraft within your weapon at the cost of your own vitality. Choose one rite from the Primal Rites list to learn. As a bonus action, you activate a crimson rite on a 
+    - content: You learn to invoke a rite of hemocraft within your weapon at the cost of your own vitality. Choose one rite from the Crimson Rites list to learn. As a bonus action, you activate a crimson rite on a 
                single weapon with the elemental energy of a known rite of your choice that lasts until you finish a short or long rest, or if you aren’t holding the weapon at the end of your turn. When you activate a rite,
                you lose a number of hit points equal to one roll of your hemocraft die, as shown in the Hemocraft Die column of the Blood Hunter table. While active, attacks from this weapon deal an additional 1d4 damage 
                of the chosen rite’s type. This damage is magical, and increases as you gain levels as a blood hunter, as shown in the Hemocraft Die column of the Blood Hunter table. A weapon can only hold a single active 
-               rite at a time. You learn an additional Primal Rite of your choice at 7th level, and choose an Esoteric Rite to learn at 14th level.
-    - title: Primal Rites Known
-    - content:    
+               rite at a time. You learn an additional Crimson Rite of your choice at 7th level, and choose an Esoteric Rite to learn at 14th level.
+    - title: Crimson Rites Known
+    - content: 3
     - title: Extra Attack
     - content: You can attack twice, instead of once, whenever you take the Attack action
     - title: Brand of Castigation
@@ -601,7 +598,7 @@ npc:
     - title: Spellcasting
     - abilities: 
     - title: Spell DC
-    - content:
+    - content: 22
     - title: 1st level
     - content: Sleep, False Life
     - title: 3rd level
@@ -640,20 +637,20 @@ npc:
     - title: Blood Curse of Siphoning
     - content: You are able to drain life essence from your opponents. You gain Blood Curse of Siphoning for your Blood Maledict feature. This does not count against your number of blood curses known.
                As an action, target a creature within 30 feet of you that isn't a construct. The target takes necrotic damage equal to three rolls of your hemocraft die and you heal 
-               for the amount of hit points the targe t loses.
-               Amplify - The rolls of your hemocraft die a re maximized
+               for the amount of hit points the target loses.
+               Amplify - The rolls of your hemocraft die are maximized
     - title: Blood Curse of Purgation
     - content: Your advanced blood magic can cleanse a creature of a harmful effect. You gain Blood Curse of Purgation for your Blood Maledict feature. This does not count against your number of blood curses known.
                As a bonus action, choose a creature withing 30 feet of you and end one poisoned condition affecting the creature.
-               Amplify - Ins tead of the poisoned condition you can choose to end one of the following conditions; blinded, deafened, or paralyzed
+               Amplify - Instead of the poisoned condition you can choose to end one of the following conditions; blinded, deafened, or paralyzed
     - title: Brand of Haemorrhage
-    - content: Your Brand of Castigation a llows you to conserve your vital force when empowering your blood curses. Whenever you target a branded creature by a blood curse, amplifying it does not cost you any 
+    - content: Your Brand of Castigation allows you to conserve your vital force when empowering your blood curses. Whenever you target a branded creature by a blood curse, amplifying it does not cost you any 
                hit points.
     - title: Crimson Might
     - content: Your Blood Curse of Siphoning overcomes resistance to necrotic damage. Additionally, whenever you invoke a blood curse on your turn you gain bonus to damage of your weapon attacks you make before end of 
                your turn equal to your Intelligence modifier.
     - title: Blood Curse of Mutual Suffering
-    - content: You can form a magical link between you and other creature ma king it share any injuries it makes you s uffe r. You gain Blood Curse of Mutual Suffering for your Blood Maledict feature. 
+    - content: You can form a magical link between you and other creature making it share any injuries it makes you suffer. You gain Blood Curse of Mutual Suffering for your Blood Maledict feature. 
     - content: This does not count against your number of blood curses known.
     - content: As a bonus action, choose one creature within 30 feet of you. A magical link is created between you and the creature until start of your next turn. 
     - content: Whenever the linked creature damages you by attack, spell or other effect, the damage is halved and the creature loses number of hit points equal to 
@@ -661,12 +658,12 @@ npc:
     - content: Amplify - You can link up to number of creatures equal to your Intelligence modifier (minimum of 2).
 
   - title: Feats
-  - content: Keen Mind, War Caster, Observant, Wild Talent, Telekinetic, Telepathic, Ritual Caster, Metabolic Control, Blood Magic
+  - content: Keen Mind, War Caster, Observant, Ritual Caster, Blood Magic, Actor, Spell Sniper
   - title: Legendary Resistance
-  - content: (3/Day), If Grey Crow fails a saving throw she can choose to succeed instead 
+  - content: (3/Day), If Father Seaton Gorey fails a saving throw she can choose to succeed instead 
   - title: Legendary Actions 
-  - content: Grey Crow can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-             Grey Crow regains spent Legendary Actions at the start of her turn
+  - content: Father Seaton Gorey can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
+             Father Seaton Gorey regains spent Legendary Actions at the start of her turn
   - abilities:
     - title: Maddening Touch
     - content: Melee Spell Attack +6 to hit, Range - Touch, Damage - 4d12 + 10 psychic damage. On a failed saving throw, the effected creature must role on the Short-Term Madness Table (DMG p. 259) and is afflicted with that 
